<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="8dp">

        <!-- Image of the restaurant -->
        <ImageView
            android:id="@+id/imageViewRestaurant"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <!-- Name of the restaurant -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textDishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/dish_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/imageViewRestaurant"
            app:layout_constraintTop_toBottomOf="@id/imageViewRestaurant"/>

        <!-- Price for two -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/_500_for_two"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/textDishName"
            app:layout_constraintTop_toBottomOf="@id/textDishName"/>

        <Button
            android:id="@+id/AddButton"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_gradient"
            android:text="@string/Add"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.717"
            app:layout_constraintStart_toEndOf="@id/textDishName"
            app:layout_constraintTop_toBottomOf="@id/imageViewRestaurant" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>