<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:contentDescription="@string/logo_description"
                app:srcCompat="@drawable/fdl" />

            <TextView
                android:id="@+id/cafehouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textColor="@color/tintlogocolor"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/editTextForgotEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/backgroundeditview"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <Button
                android:id="@+id/buttonResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_gradientbright"
                android:text="Forgot Password"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtBackToSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="Want to Sign In"
                android:textColor="#2F82EA"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
