<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/l2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/profile"
                    app:civ_border_color="@color/endcolorgradient"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/upload_image"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <View
                    android:id="@+id/view"
                    android:layout_width="90dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="#0E0E0E" />

                <EditText
                    android:id="@+id/edituser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/user_name"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="+91 000000000"
                    android:inputType="phone"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/editTextemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="E-mail"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/editTextpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="*******"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/registerbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn_gradient"
                    android:text="Register"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view3"
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/startcolorgradient" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Or with" />

                    <View
                        android:id="@+id/view4"
                        android:layout_width="50dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/startcolorgradient" />

                </LinearLayout>



                <TextView
                    android:id="@+id/tv8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/already_have_account_login"
                    android:textColor="@color/black"
                    android:textStyle="bold">
                </TextView>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>